pink background advantages

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section section--pink-background">
     <div class="container container__advantages">
         <h2 class="section__title section__title--is-hidden">Our advantages</h2>
         <ul class="advantages">
