--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,5 +1,5 @@
-<section class="section section__gallery">
-    <div class="container">
+<section class="sectio">
+    
 <picture class="gallery">
     <source srcset="./images/Gallery/gallery-desktop.jpg 1x, ./images/Gallery/gallery-desktop@2x.jpg 2x"
         type="image/jpeg" media="(min-width: 1280px)" />
@@ -8,6 +8,6 @@
     <source srcset="./images/Gallery/gallery-mobile.jpg 1x, ./images/Gallery/gallery-mobile@2x.jpg 2x" type="image/jpeg"
         media="(min-width: 480px)" />
 
-    <img class="gallery__img" src="./images/Gallery/gallery-mobile.jpg" alt="разные виды мороженого" />
-    </div>
+    <img class="gallery__img" src="./images/Gallery/gallery-mobile.jpg" alt="different types of ice-cream" />
+  
 </section>
