--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -36,11 +36,7 @@
       <address class="address">
         <span class="address__text"
           >Feel free to contact
-          <a
-            class="address__link"
-            href="tel:+610383766284"
-            aria-label="telephone.+610383766284"
-            target="_blank"
+          <a class="address__link" href="tel:+610383766284" aria-label="telephone.+610383766284"
             >+61 (0) 383 766 284</a
           >
         </span>
@@ -48,6 +44,6 @@
     </div>
   </div>
   <div class="footer__block">
-    <span class="footer__text">© 2019 - IceCream. All Rights Reserved.</span>
+    <span class="footer__text"> &#169; 2019 - IceCream. All Rights Reserved.</span>
   </div>
 </footer>
