--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,4 +1,4 @@
-<section class="sectio">
+<section class="section">
     
 <picture class="gallery">
     <source srcset="./images/Gallery/gallery-desktop.jpg 1x, ./images/Gallery/gallery-desktop@2x.jpg 2x"
