--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,6 +1,6 @@
-<section class="hero section">
+<section class="hero">
   <div class="hero__block container">
-    <h1 class="section__title">
+    <h1 class="setion__titel animate__animated animate__backInLeft">
       <span class="hero___titel--white"
         >ice cream <br />
         made with</span
@@ -11,28 +11,49 @@
       <a href="#" class="hero__button"> Products </a>
       <a href="#" class="hero__button hero__button--white"> How its made? </a>
     </div>
-    <img
-      class="hero__ice-cream"
-      src="./images/Hero/hero-icecream-mobile.png"
-      alt="icon ice-cream"
-    />
-    <img
-      class="hero__ice-cream--tab"
-      src="/images/Hero/hero-icecream-tablet.png"
-      alt="icon ice-cream"
-    />
-    <img
-      class="hero__ice-cream--desc"
-      src="/images/Hero/hero-icecream-desktop.png"
-      alt="icon ice-cream"
-    />
+    <picture class="animate__animated animate__jello animate__delay-1s">
+      <img
+        class="hero__ice-cream animate__animated animate__tada animate__delay-1s"
+        src="./images/Hero/hero-icecream-mobile.png"
+        srcset="./images/Header/ice-cream/logo.png 1x, ./images/Hero/hero-icecream-mobile@2x.png 2x"
+        alt="icon ice-cream"
+      />
+      <img
+        class="hero__ice-cream--tab animate__animated animate__tada animate__delay-1s"
+        srcset="./images/Header/ice-cream/logo.png 1x, ./images/Hero/hero-icecream-tablet@2x.png 2x"
+        src="/images/Hero/hero-icecream-tablet.png"
+        alt="icon ice-cream"
+      />
+      <img
+        class="hero__ice-cream--desc animate__animated animate__tada animate__delay-1s"
+        src="/images/Hero/hero-icecream-desktop.png"
+        srcset="
+          ./images/Header/ice-cream/logo.png         1x,
+          ./images/Hero/hero-icecream-desktop@2x.png 2x
+        "
+        alt="icon ice-cream"
+      />
+    </picture>
     <div class="hero__milk">
-      <img class="herro__icon-milk" src="/images/Hero/hero-milk-tablet.png" alt="icon milk" />
+      <picture>
+        <img
+          class="herro__icon-milk animate__animated animate__backInLeft animate__delay-2s"
+          src="/images/Hero/hero-milk-tablet.png"
+          srcset="./images/Hero/hero-milk-tablet.png 1x, ./images/Hero/hero-milk-tablet@2x.png 2x"
+          alt="icon milk"
+        />
+        <img
+          class="herro__icon-milk--desc animate__animated animate__backInLeft animate__delay-2s"
+          src="/images/Hero/hero-milk-desktop.png"
+          alt="icon milk"
+          srcset="./images/Hero/hero-milk-desktop.png 1x, ./images/Hero/hero-milk-desktop@2x.png 2x"
+        />
+      </picture>
       <p class="herro__text-milk">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
         labore et
       </p>
-      <a href="#"></a>
+      <a class="hero__btn-milk" href="#"></a>
     </div>
     <div class="hero__box">
       <ul class="hero__list">
@@ -46,6 +67,19 @@
         </li>
       </ul>
     </div>
-    <img class="hero__tasty" src="/images/Hero/hero-girl-tablet.png" alt="" />
+    <picture>
+      <img
+        class="hero__tasty animate__animated animate__backInRight animate__delay-1s"
+        src="/images/Hero/hero-girl-tablet.png "
+        srcset="./images/Hero/hero-girl-tablet.png 1x, ./images/Hero/hero-girl-tablet@2x.png 2x"
+        alt="gerl with milk"
+      />
+      <img
+        class="hero__tasty--desc animate__animated animate__backInRight animate__delay-1s"
+        src="/images/Hero/hero-girl-desktop.png"
+        srcset="./images/Hero/hero-girl-desktop.png 1x, ./images/Hero/hero-girl-desktop@2x.png 2x"
+        alt="gerl with milk"
+      />
+    </picture>
   </div>
 </section>
