Fix/about/bcg       Fix/gallery/image

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,5 +1,5 @@
-<section class="section">
-    
+<section class="section gallery__section">
+    <div class="gallery__container">
 <picture class="gallery">
     <source srcset="./images/Gallery/gallery-desktop.jpg 1x, ./images/Gallery/gallery-desktop@2x.jpg 2x"
         type="image/jpeg" media="(min-width: 1280px)" />
@@ -9,5 +9,5 @@
         media="(min-width: 480px)" />
 
     <img class="gallery__img" src="./images/Gallery/gallery-mobile.jpg" alt="different types of ice-cream" />
-  
+  </div>
 </section>
