--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -69,13 +69,13 @@
     </div>
     <picture>
       <img
-        class="hero__tasty animate__animated animate__backInRight animate__delay-1s"
+        class="hero__tasty animate__animated animate__fadeInRight animate__delay-1s"
         src="/images/Hero/hero-girl-tablet.png "
         srcset="./images/Hero/hero-girl-tablet.png 1x, ./images/Hero/hero-girl-tablet@2x.png 2x"
         alt="gerl with milk"
       />
       <img
-        class="hero__tasty--desc animate__animated animate__backInRight animate__delay-1s"
+        class="hero__tasty--desc animate__animated animate__fadeInRight animate__delay-1s"
         src="/images/Hero/hero-girl-desktop.png"
         srcset="./images/Hero/hero-girl-desktop.png 1x, ./images/Hero/hero-girl-desktop@2x.png 2x"
         alt="gerl with milk"
