--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -15,12 +15,12 @@
       <img
         class="hero__ice-cream animate__animated animate__tada animate__delay-1s"
         src="./images/Hero/hero-icecream-mobile.png"
-        srcset="./images/Header/ice-cream/logo.png 1x, ./images/Hero/hero-icecream-mobile@2x.png 2x"
+        srcset="./images/Hero/hero-icecream-mobile.png 1x, ./images/Hero/hero-icecream-mobile@2x.png 2x"
         alt="icon ice-cream"
       />
       <img
         class="hero__ice-cream--tab animate__animated animate__tada animate__delay-1s"
-        srcset="./images/Header/ice-cream/logo.png 1x, ./images/Hero/hero-icecream-tablet@2x.png 2x"
+        srcset="./images/Hero/hero-icecream-tablet.png 1x, ./images/Hero/hero-icecream-tablet@2x.png 2x"
         src="/images/Hero/hero-icecream-tablet.png"
         alt="icon ice-cream"
       />
@@ -28,7 +28,7 @@
         class="hero__ice-cream--desc animate__animated animate__tada animate__delay-1s"
         src="/images/Hero/hero-icecream-desktop.png"
         srcset="
-          ./images/Header/ice-cream/logo.png         1x,
+        /images/Hero/hero-icecream-desktop.png         1x,
           ./images/Hero/hero-icecream-desktop@2x.png 2x
         "
         alt="icon ice-cream"
