--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -11,7 +11,7 @@
           ut labore et. dolore magna aliqua facilisis.
         </p>
         <button type="button" class="products__btn">
-          <svg class="btn__icon">
+          <svg class="btn-icon">
             <use width="12" height="12" href="./images/symbol-defs.svg#icon-arrow-right2"></use>
           </svg>
         </button>
@@ -24,7 +24,7 @@
           ut labore et. dolore magna aliqua facilisis.
         </p>
         <button type="button" class="products__btn">
-          <svg class="btn__icon">
+          <svg class="btn-icon">
             <use width="12" height="12" href="./images/symbol-defs.svg#icon-arrow-right2"></use>
           </svg>
         </button>
@@ -37,7 +37,7 @@
           ut labore et. dolore magna aliqua facilisis.
         </p>
         <button type="button" class="products__btn">
-          <svg class="btn__icon">
+          <svg class="btn-icon">
             <use width="12" height="12" href="./images/symbol-defs.svg#icon-arrow-right2"></use>
           </svg>
         </button>
