--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -1,5 +1,7 @@
 .gallery__section {
-  background: linear-gradient(180deg, #fff5f6 40%, #fff 60%);
+  // background: linear-gradient(180deg, #fff5f6 40%, #fff 60%);
+  background-image: linear-gradient(to bottom, var(--light-brand-color) 30%, var(--main-bgc) 30%);
+
 }
 
 .gallery__container{
