--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -22,7 +22,7 @@
           <p class="slider__name">Emily, Los Angeles</p>
         </div>
 
-        <div class="swiper-slide">
+        <div class="slider__slide swiper-slide">
           <img
             srcset="
               ./images/сustomer-reviews/customer2.png    1x,
@@ -41,7 +41,7 @@
           <p class="slider__name">Emily, Los Angeles</p>
         </div>
 
-        <div class="swiper-slide">
+        <div class="slider__slide swiper-slide">
           <img
             srcset="
               ./images/сustomer-reviews/customer3.png    1x,
